<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_gravity="center"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <Button
                android:id="@+id/ent_home_featured_videos_id"
                android:layout_margin="10dp"
                android:text="@string/featured_videos"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

        <Button
                android:id="@+id/ent_home_movies_id"
                android:layout_margin="10dp"
                android:text="@string/movies"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

        <Button
                android:id="@+id/ent_home_comedy_id"
                android:layout_margin="10dp"
                android:text="@string/comedy_scenes"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

        <Button
                android:id="@+id/ent_home_trailers_id"
                android:layout_margin="10dp"
                android:text="@string/latest_trailers"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

        <Button
                android:id="@+id/ent_home_short_moviess_id"
                android:layout_margin="10dp"
                android:text="@string/short_movies"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

        <Button
                android:id="@+id/ent_home_songs_id"
                android:layout_margin="10dp"
                android:text="@string/songs"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

    </LinearLayout>
</ScrollView>